fix: ci-cd pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
   deployment:
     needs: build
-    environment: staging
+    environment: main
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to VPS
