--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: CI
 
 on:
   push:
-    branches: ["main"] 
+    branches: ["main"]
 
-    
 jobs:
   build:
     environment: main
@@ -12,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Connect to DockerHub
         uses: docker/login-action@v2
