fix: ci-cd pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,6 @@ jobs:
             docker container ls -a
             docker container logs -f ${{ vars.CONTAINER_NAME }}
 
-            ls
-            pwd
+            sudo ls
+            sudo pwd
 
