--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,7 @@ jobs:
             whoami
             sudo su
 
-            export DB_HOST=mydatabasehost
-            export DB_PORT=3306
+            docker compose up -d
 
             docker stop clean_architecture || true && docker rm clean_architecture || true
             docker pull ${{ vars.IMAGE_NAME }}
