--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,8 @@
               docker stop clean_architecture || true && docker rm clean_architecture || true
               docker pull ${{ vars.IMAGE_NAME }}
 
-              ls -l
-
-              docker-compose -f docker-compose.yaml up -d
-              docker-compose -f docker-compose.yaml ls
+              docker-compose down
+              docker-compose up -d
 
               docker run -d -p 9090:9090 --name ${{ vars.CONTAINER_NAME }} ${{ vars.IMAGE_NAME }}
               docker container ls -a
