--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@
         
         - name: Deploy using Docker Compose
           run: |
-              docker-compose -f docker-compose.yml up -d
+              docker-compose -f docker-compose.yaml up -d
 
     deployment:
       needs: build
