--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,9 +53,8 @@
               docker stop clean_architecture || true && docker rm clean_architecture || true
               docker pull ${{ vars.IMAGE_NAME }}
 
-              docker-compose -f ./app/docker-compose.yaml down
-              docker-compose -f ./app/docker-compose.yaml up -d
-
+              docker-compose -f docker-compose.yaml up -d
+              
               docker run -d -p 9090:9090 --name ${{ vars.CONTAINER_NAME }} ${{ vars.IMAGE_NAME }}
               docker container ls -a
               docker container logs -f ${{ vars.CONTAINER_NAME }}
