fix: ci-cd pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,10 @@
               docker stop clean_architecture || true && docker rm clean_architecture || true
               docker pull ${{ vars.IMAGE_NAME }}
 
+              which docker-compose
+
               docker-compose -f docker-compose.yaml up -d
-              
+
               docker run -d -p 9090:9090 --name ${{ vars.CONTAINER_NAME }} ${{ vars.IMAGE_NAME }}
               docker container ls -a
               docker container logs -f ${{ vars.CONTAINER_NAME }}
