fix: ci-cd pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@
         
         - name: Deploy using Docker Compose
           run: |
-              docker-compose -f docker-compose.yaml up -d
+              docker compose build
+              docker compose push 
 
     deployment:
       needs: build
