--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,6 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ vars.CONTAINER_NAME }}:latest
 
-          
   deployment:
     needs: build
     environment: main
@@ -44,8 +43,13 @@ jobs:
           passphrase: ${{ secrets.SSH_PRIVATE_KEY_PASSWORD }}
           port: ${{ secrets.SERVER_PORT  }}
           script: |
+
+            sudo mkdir /golang/clean-architecture
+            wget https://raw.githubusercontent.com/IJ4L/amitshekhariitbhu/main/docker-compose.yaml
+            sudo docker compose -f /golang/clean-architecture/docker-compose.yaml down
+            sudo docker compose -f /golang/clean-architecture/docker-compose.yaml up -d
+
             sudo docker stop clean_architecture || true && docker rm clean_architecture || true
             sudo docker pull ${{ vars.IMAGE_NAME }}
             sudo docker run -d -p 9090:9090 --name ${{ vars.CONTAINER_NAME }} ${{ vars.IMAGE_NAME }}
-
-            ls
+            sudo docker container ls -a
