--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,9 @@ jobs:
             sudo mkdir clean-architecture
             cd clean-architecture
 
-            wget https://raw.githubusercontent.com/IJ4L/amitshekhariitbhu/main/docker-compose.yaml
+            whoami
+
+            sudo wget https://raw.githubusercontent.com/IJ4L/amitshekhariitbhu/main/docker-compose.yaml
             sudo docker compose down
             sudo docker compose up -d
             sudo docker compose ls
