--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_ENV=development
-SERVER_ADDRESS=:8080
-PORT=8080
+SERVER_ADDRESS=:5050
+PORT=5050
 CONTEXT_TIMEOUT=2
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASS=
-DB_NAME=go-backend-clean-architecture-db
+DB_PORT=6603
+DB_USER=ijulll
+DB_PASS=123
+DB_NAME=clean
 ACCESS_TOKEN_EXPIRY_HOUR = 2
 REFRESH_TOKEN_EXPIRY_HOUR = 168
 ACCESS_TOKEN_SECRET=access_token_secret
