--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - "6603:3306"
     environment:
-      MYSQL_DATABASE: bioskop
+      MYSQL_DATABASE: clean
       MYSQL_USER: ijulll
       MYSQL_PASSWORD: 123
       MYSQL_ROOT_PASSWORD: 123
