--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           port: ${{ secrets.SERVER_PORT  }}
           script: |
             cd golang
-            rm -rf clean-architecture
+            sudo rm -rf clean-architecture
             sudo mkdir clean-architecture
             cd clean-architecture
 
