--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,9 @@ jobs:
             cd clean-architecture
 
             sudo wget https://raw.githubusercontent.com/IJ4L/amitshekhariitbhu/main/docker-compose.yaml
+
+            sudo docker network create nginx-proxy
+
             sudo docker compose down
             sudo docker compose up -d
             sudo docker compose ls
