--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,8 +43,8 @@ services:
 networks:
   app-network:
     driver: bridge
-    name: nginx-proxy
+    external:
+      name: nginx-proxy
 
 volumes:
   db_data:
-
