--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,15 +43,13 @@ jobs:
           passphrase: ${{ secrets.SSH_PRIVATE_KEY_PASSWORD }}
           port: ${{ secrets.SERVER_PORT  }}
           script: |
+            sudo mkdir golang
             cd golang
             sudo rm -rf clean-architecture
             sudo mkdir clean-architecture
             cd clean-architecture
 
             sudo wget https://raw.githubusercontent.com/IJ4L/amitshekhariitbhu/main/docker-compose.yaml
-
-            sudo docker network create nginx-proxy
-
             sudo docker compose down
             sudo docker compose up -d
             sudo docker compose ls
