--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST=103.175.219.55
 DB_PORT=6603
 DB_USER=ijulll
 DB_PASS=123
-DB_NAME=bioskop
+DB_NAME=clean
 ACCESS_TOKEN_EXPIRY_HOUR = 2
 REFRESH_TOKEN_EXPIRY_HOUR = 168
 ACCESS_TOKEN_SECRET=access_token_secret
