--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
             sudo mkdir clean-architecture
             cd clean-architecture
 
-            sudo wget https://raw.githubusercontent.com/IJ4L/amitshekhariitbhu/main/docker-compose.yaml
+            sudo wget https://raw.githubusercontent.com/IJ4L/amitshekhariitbhu/main/docker-compose.yml
             sudo docker compose down
             sudo docker compose up -d
             sudo docker compose ls
