--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.7"
 services:
   db:
     image: mysql:latest
+    container_name: db-clean
     restart: always
     ports:
       - "6603:3306"
@@ -18,6 +19,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
+    container_name: phpmyadmin-clean
     restart: always
     environment:
       PMA_HOST: db
